--- a/index.html
+++ b/index.html
@@ -1,119 +1,240 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Miami Cruise Check-In</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #0072ff, #00c6ff);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: #fff;
-    }
-
-    .container {
-      background: white;
-      color: #333;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      max-width: 400px;
-      width: 100%;
-      text-align: center;
-    }
-
-    .container.success {
-      background: #e6ffe6;
-    }
-
-    input {
-      width: 100%;
-      padding: 0.75rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-    }
-
-    button {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      border: none;
-      background-color: #0072ff;
-      color: white;
-      font-size: 1rem;
-      border-radius: 0.5rem;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #005ecc;
-    }
-
-    .error {
-      color: red;
-      margin-top: 0.5rem;
-      font-weight: bold;
-      min-height: 1.5em;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex">
+  <title>Online Check-in Bora Bora</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            display: ['Space Grotesk', 'ui-sans-serif', 'system-ui']
+          },
+          colors: {
+            island: {
+              aqua: '#4dd0e1',
+              sand: '#fdf4e3'
+            }
+          }
+        }
+      }
+    };
+  </script>
 </head>
-<body>
-  <div class="container" id="form-container">
-    <h1>Reederei Streifing – Miami Cruise Check-In</h1>
-    <form id="checkinForm">
-      <input type="text" id="name" placeholder="Enter your name" required />
-      <input type="text" id="cruiseId" placeholder="Enter Cruise ID" required />
-      <p id="error" class="error"></p>
-      <button type="submit">Check In</button>
-    </form>
+<body class="min-h-screen bg-gradient-to-br from-cyan-950 via-sky-900 to-emerald-700 text-slate-900 font-display">
+  <div class="min-h-screen flex items-center justify-center px-4 py-12">
+    <div class="w-full max-w-2xl">
+      <div class="text-center text-white mb-10 space-y-3">
+        <p class="uppercase tracking-[0.4em] text-xs font-semibold text-cyan-200">Reederei Streifing</p>
+        <h1 class="text-4xl md:text-5xl font-semibold">Online Check-in Bora Bora</h1>
+        <p class="text-sm md:text-base text-cyan-100">Bestätige deine Teilnahme an der Party-Cruise und sichere dir deine Kabine.</p>
+      </div>
+
+      <div class="bg-white/80 backdrop-blur border border-white/60 rounded-3xl shadow-2xl overflow-hidden">
+        <section id="form-screen" class="p-8 space-y-6">
+          <div class="space-y-2">
+            <h2 class="text-2xl font-semibold text-slate-900">Gästeangaben</h2>
+            <p class="text-sm text-slate-600">Bitte gib den Namen exakt wie auf deiner Einladung sowie deinen Buchungs-Code ein.</p>
+          </div>
+
+          <form id="checkinForm" class="space-y-5">
+            <div class="space-y-2">
+              <label for="name" class="text-sm uppercase tracking-wide text-slate-500">Name laut Einladung</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Vorname Nachname"
+                class="w-full rounded-2xl border border-slate-200 bg-white/90 px-4 py-3 text-base shadow-sm focus:border-sky-500 focus:ring-2 focus:ring-sky-200 focus:outline-none"
+                required
+              >
+            </div>
+
+            <div class="space-y-2">
+              <label for="cruiseId" class="text-sm uppercase tracking-wide text-slate-500">Buchungs-Code</label>
+              <input
+                type="text"
+                id="cruiseId"
+                name="cruiseId"
+                placeholder="Dein Code"
+                class="w-full rounded-2xl border border-slate-200 bg-white/90 px-4 py-3 text-base shadow-sm tracking-wider focus:border-emerald-500 focus:ring-2 focus:ring-emerald-200 focus:outline-none"
+                required
+              >
+              <p class="text-xs text-slate-500">Den Code findest du in der Einladung oder auf deiner Buchungsbestätigung.</p>
+            </div>
+
+            <p id="error" class="text-sm font-semibold text-rose-600 min-h-[24px]"></p>
+
+            <button
+              type="submit"
+              class="w-full rounded-2xl bg-gradient-to-r from-cyan-500 to-emerald-500 py-3 text-lg font-semibold text-white shadow-lg shadow-emerald-600/30 hover:brightness-110 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-400">
+              Kabine auswählen
+            </button>
+          </form>
+        </section>
+
+        <section id="cabin-screen" class="hidden p-8 space-y-6">
+          <div class="space-y-2">
+            <p class="text-xs uppercase tracking-[0.4em] text-slate-400">Schritt 2</p>
+            <h2 class="text-2xl font-semibold text-slate-900">Wähle deine Kabine</h2>
+          </div>
+
+          <div id="cabinList" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
+        </section>
+
+        <section id="confirmation-screen" class="hidden p-8 space-y-6 text-center">
+          <div class="space-y-4">
+            <div class="inline-flex items-center gap-2 rounded-full bg-emerald-100 px-4 py-2 text-emerald-800 text-sm font-semibold">
+              <span>✔</span>
+              Check-in bestätigt
+            </div>
+            <h2 class="text-3xl font-semibold text-slate-900">Bis bald im Paradies!</h2>
+            <p class="text-base text-slate-600">
+              Vielen Dank, <span id="guest-name" class="font-semibold text-slate-900"></span>. Kabine
+              <span id="selected-cabin" class="font-mono text-lg text-emerald-600"></span> ist exklusiv für dich hinterlegt.
+            </p>
+            <div class="text-sm text-slate-500">
+              Check-in-Code: <span id="confirmation-code" class="font-mono text-base text-slate-800"></span>
+            </div>
+          </div>
+          <div class="flex flex-col sm:flex-row gap-4 justify-center">
+            <button
+              type="button"
+              class="flex-1 rounded-2xl border border-slate-200 bg-white px-4 py-3 font-semibold text-slate-700 shadow hover:border-slate-400"
+              onclick="window.print()">
+              Bestätigung drucken
+            </button>
+            <button
+              type="button"
+              id="restartBtn"
+              class="flex-1 rounded-2xl bg-gradient-to-r from-slate-900 to-slate-800 px-4 py-3 font-semibold text-white shadow-lg hover:brightness-110">
+              Weitere Person einchecken
+            </button>
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 
   <script>
-    function showConfirmation() {
-      const name = localStorage.getItem('checkinName');
-      const checkinId = localStorage.getItem('checkinId');
-      const container = document.getElementById('form-container');
-      container.className = 'container success';
-      container.innerHTML = `
-        <h1>Check-In Successful</h1>
-        <p>Thank you, ${name}. Your check-in ID is ${checkinId}.</p>
-        <button onclick="window.print()">Print Confirmation</button>
-      `;
+    const REQUIRED_CRUISE_ID = 'RS-2088-BORA';
+    // use lowercase
+    const ALLOWED_NAMES = ['julia schabasser', 'bettina zillinger', 'carina drisa'];
+    const TOTAL_CABINS = 12;
+
+    const form = document.getElementById('checkinForm');
+    const formScreen = document.getElementById('form-screen');
+    const cabinScreen = document.getElementById('cabin-screen');
+    const confirmationScreen = document.getElementById('confirmation-screen');
+    const errorEl = document.getElementById('error');
+    const cabinList = document.getElementById('cabinList');
+    const guestNameEl = document.getElementById('guest-name');
+    const selectedCabinEl = document.getElementById('selected-cabin');
+    const confirmationCodeEl = document.getElementById('confirmation-code');
+    const restartBtn = document.getElementById('restartBtn');
+
+    const cabins = Array.from({ length: TOTAL_CABINS }, (_, index) => ({
+      number: String(index + 1).padStart(2, '0'),
+      available: index + 1 === 11
+    }));
+
+    function showCabinScreen() {
+      formScreen.classList.add('hidden');
+      cabinScreen.classList.remove('hidden');
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
 
-    document.getElementById('checkinForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const name = document.getElementById('name').value.trim();
-      const cruiseId = document.getElementById('cruiseId').value.trim();
-      const error = document.getElementById('error');
-      let cruiseOk = false;
-      if (cruiseId === "RS-2065-MIA") {
-        const checkInId = "CHK-" + Math.random().toString(36).substr(2, 8).toUpperCase();
-        localStorage.setItem('checkinName', name);
-        localStorage.setItem('checkinId', checkInId);
-        cruiseOk = true;
-      } else {
-        error.textContent = "Invalid Cruise ID.";
-      }
-      let nameOk = true;
-      if (cruiseOk && !name.toLowerCase().includes('bettina') && !name.toLowerCase().includes('carina') && !name.toLowerCase().includes('julia'))        
-      {
-          error.textContent = "Guest not found";
-          nameOk = false;
+    function showConfirmation(selectedCabin, guestName) {
+      const checkInId = 'CHK-' + Math.random().toString(36).substring(2, 8).toUpperCase();
+      cabinScreen.classList.add('hidden');
+      confirmationScreen.classList.remove('hidden');
+      guestNameEl.textContent = guestName;
+      selectedCabinEl.textContent = selectedCabin;
+      confirmationCodeEl.textContent = checkInId;
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    function renderCabins() {
+      cabinList.innerHTML = '';
+      cabins.forEach(cabin => {
+        const button = document.createElement('button');
+        button.type = 'button';
+        button.dataset.cabin = cabin.number;
+        button.disabled = !cabin.available;
+        button.className = [
+          'w-full rounded-2xl border px-4 py-5 text-left transition shadow-sm',
+          cabin.available
+            ? 'bg-white border-emerald-200 hover:border-emerald-400 hover:shadow-md'
+            : 'bg-slate-100 border-slate-200 text-slate-400 cursor-not-allowed'
+        ].join(' ');
+        button.innerHTML = `
+          <div class="flex items-center justify-between">
+            <span class="text-lg font-semibold text-slate-900">Kabine ${cabin.number}</span>
+            ${cabin.available
+              ? '<span class="text-sm font-bold text-emerald-600">Verfügbar</span>'
+              : '<span class="text-xs font-semibold uppercase tracking-wide text-rose-500">Belegt</span>'}
+          </div>
+          <p class="mt-2 text-sm ${cabin.available ? 'text-slate-600' : 'text-slate-400'}">
+            ${cabin.available ? 'Lagunenblick-Suite für VIP-Gäste.' : 'Bereits einer anderen Crew zugeteilt.'}
+          </p>
+        `;
+        cabinList.appendChild(button);
+      });
+    }
+
+    form.addEventListener('submit', event => {
+      event.preventDefault();
+      const nameValue = document.getElementById('name').value.trim();
+      const cruiseIdValue = document.getElementById('cruiseId').value.trim().toUpperCase();
+
+      if (!nameValue) {
+        errorEl.textContent = 'Bitte gib deinen vollständigen Namen ein.';
+        return;
       }
 
-      if(cruiseOk && nameOk) {
-          showConfirmation();
+      if (!ALLOWED_NAMES.includes(nameValue.toLowerCase())) {
+        errorEl.textContent = 'Dieser Name steht nicht auf der Gästeliste.';
+        return;
       }
+
+      if (cruiseIdValue !== REQUIRED_CRUISE_ID) {
+        errorEl.textContent = 'Buchungs-Code wird für diese Reise nicht erkannt.';
+        return;
+      }
+
+      errorEl.textContent = '';
+      localStorage.setItem('checkinName', nameValue);
+      showCabinScreen();
     });
+
+    cabinList.addEventListener('click', event => {
+      const cabinButton = event.target.closest('button[data-cabin]');
+      if (!cabinButton || cabinButton.disabled) {
+        return;
+      }
+
+      const selectedCabin = cabinButton.dataset.cabin;
+      const guestName = localStorage.getItem('checkinName') || 'Gast';
+      showConfirmation(selectedCabin, guestName);
+    });
+
+    restartBtn.addEventListener('click', () => {
+      localStorage.removeItem('checkinName');
+      confirmationScreen.classList.add('hidden');
+      cabinScreen.classList.add('hidden');
+      form.reset();
+      formScreen.classList.remove('hidden');
+      errorEl.textContent = '';
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
+    renderCabins();
   </script>
 </body>
 </html>
